on-premises/4.3/modules/ROOT/pages/installing-an-enterprise-license.adoc
= Install an Enterprise License on On-Premises Mule Runtime Engine
:page-aliases: mule-runtime::installing-an-enterprise-license.adoc
:keywords: muleLicenseKey.lic, installLicense, verifyLicense, license expired, tanuki, java service wrapper license, vcore, on-premises, on-prem, standalone, enterprise, ee, license, licensed

This is the License stage in xref:index.adoc[Run Mule Runtime Engine On-Premises]. Stop the runtime before you install the license. After it installs, configure the Java Service Wrapper, then start the instance and deploy Mule applications.

An on-premises Mule runtime engine 4.3 with an expired license does not restart. Install a valid Enterprise license before you start the runtime in production.

The Mule Enterprise license (`muleLicenseKey.lic`) is not the Java Service Wrapper (Tanuki) license. A Tanuki license error means the wrapper key is missing or invalid, not that `mule -installLicense` failed.

MuleSoft makes available a trial version of the Enterprise Edition of Mule runtime engine (Mule) for the purpose of evaluation. Though perfect for exploring Mule and Anypoint Studio, the trial license for Enterprise limits usage of Mule and is not appropriate for production uses.

Complete the following steps to acquire and install a non-trial *Enterprise license* before you use Mule runtime in a production environment.

. Contact your MuleSoft account representative or https://www.mulesoft.com/contact[the MuleSoft sales team] to acquire an *Enterprise license* in the form of a `license.lic` file.
. Before installing, it's recommended to remove the previous license from your `$MULE_HOME` directory:
.. Navigate to `$MULE_HOME/conf/`
.. Delete the existing `muleLicenseKey.lic` file.
. If you are installing your license on multiple platforms, back up your new `license.lic` file in another location before proceeding.
. Make sure that the Mule Server is *stopped (not running)* and then open the terminal or command line on your system.
. Set the `JAVA_HOME` environment variable before running the `mule -installLicense` command.
+
.. On *Mac/Unix/Linux*, if `JAVA_HOME` isn't detected automatically, set it to avoid any issues.
.. On *Windows*, if `JAVA_HOME` isn't set, the license installation fails.
. Run the license installation command:
+
.. On *Mac/Unix/Linux*, from the `$MULE_HOME/bin` directory, run `mule -installLicense ~/license.lic`.
.. On *Windows*, copy the `license.lic` file to the `\bin` folder, and then run `mule.bat -installLicense license.lic` from the command line.
. In the `$MULE_HOME/conf` directory, Mule saves a new file called `muleLicenseKey.lic`. This shows that the license has been installed.
. *Start* your Mule Server again, by the usual means.

== Verify or Remove an Enterprise License

Make sure that the Mule Server is *stopped* and then open the terminal or command line on your system.

To verify that Mule successfully installed your Enterprise license, run the following command:

`mule -verifyLicense`

To uninstall a previously installed license, run the following command:

`mule -unInstallLicense`

Sometimes the license installation fails and it might be necessary to manually delete `$MULE_HOME/conf/muleLicenseKey.lic`

== Download Your License Key

. Log in to https://help.mulesoft.com[the Support portal^] using your login information. If you do not have credentials to log in, please contact your Customer Success Manager.
. Click on the *Support* tab located on the navigation menu of the MuleSoft Help Center home page.
. Click on the *Subscriptions* tab located halfway through the page.
. Click on the *Subscription Name* of the subscription you would like a license key for. Please note that you must click on the Subscription Name (second column on the right) or you will not be forwarded to the correct page.
. Click on the *License ID* number located at the end of the page on the right.
. Click on the *License Key* file located in the Notes & Attachments section at the beginning of the page on the right to download your license key.


== Install an Enterprise License on Embedded Mule Runtime Engine

Though not recommended for production environments, you have the option of installing an Enterprise license on the Mule that comes bundled with Studio.

. Download and install Mule Enterprise Edition.
. Contact your account representative or https://www.mulesoft.com/contact[the MuleSoft sales team] to acquire an *Enterprise Edition license* in the form of a `license.lic` file.
. Complete the steps outlined above to install the new license on the Mule Enterprise Edition from the first step.
. From the `$MULE_HOME/conf` directory, copy the new license file that Mule stored: `muleLicenseKey.lic`.
. Paste the `muleLicenseKey.lic` file into the classpath of your embedded application in Mule bundled with Studio.

== Install Product Licenses

To use the SAP Connector or other premium connectors, you must first acquire, then install a product license. Contact your account representative or https://www.mulesoft.com/contact[the MuleSoft sales team] to acquire a license for one of the above products.

[TIP]
The https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/[MuleSoft Enterprise Maven customer repository] allows you to access Mule Enterprise modules, connectors, and other components not included in the trial or community versions. See xref:mule-runtime::mmp-concept.adoc[About the Mule Maven Plugin] for details.


== Troubleshoot Common Error Messages

=== `java.io.FileNotFoundException: muleLicenseKey.lic (Permission denied)`

The process that runs `mule -installLicense` cannot write `$MULE_HOME/conf/muleLicenseKey.lic`. Stop the runtime, confirm the OS user owns `$MULE_HOME`, and retry. Do not copy-paste the install command if paste inserts hidden characters; type the command.

=== `The License Key was found but failed to be validated`

This message comes from the Java Service Wrapper (Tanuki), not from the Mule Enterprise license. Fix the wrapper license. Then use `mule -verifyLicense` to confirm `muleLicenseKey.lic`.

== See Also

* xref:index.adoc[Run Mule Runtime Engine On-Premises]
* xref:runtime-installation-task.adoc[Download, Install, Configure, and Upgrade On-Premises Mule Runtime Engine]
* xref:starting-and-stopping-mule-esb.adoc[Start and Stop On-Premises Mule Runtime Engine]
* xref:choosing-the-right-clustering-topology.adoc[Cluster On-Premises Mule Runtime Instances]
* xref:mule-runtime::fips-140-2-compliance-support.adoc[FIPS 140-2 Compliance Support]
